--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@
 
 # Site Settings
 theme                    : minimal-mistakes-jekyll
+remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 minimal_mistakes_skin    : "neon" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 locale                   : "en-US"
