--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,14 @@
 # main links
 main:
+  - title: "About"
+    url:  
   - title: "Experience"
     url:  /experience/
-  - title: "Courses"
-    url: /courses/
+  - title: "Teaching"
+    url:  /teaching/
   - title: "Projects"
     url: /projects/
+  - title: "Courses"
+    url: /courses/
   - title: "Random"
     url: /random/
