--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,11 @@ title                    : "Weiyue Li"
 title_separator          : "-"
 name                     : "Weiyue Li"
 description              : "Powered by Jekyll and minimal-mistakes theme"
-url                      : "https://weiyueli7.github.io/weiyueli.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
+url                      : "https://weiyueli7.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : "/weiyueli.github.io" # the subpath of your site, e.g. "/blog"
 repository               : "weiyueli7/weiyueli.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
+logo: "/assets/favicon/android-chrome-192x192.png"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
