--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ atom_feed:
   path                   : # blank (default) uses feed.xml
 
 # SEO Related
-google_site_verification :
+google_site_verification : "LHoclRqdQqGc4IU5i-7NaP-GFXlTyLzpMaM0ov9DWH0"
 bing_site_verification   :
 alexa_site_verification  :
 yandex_site_verification :
