--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ comments:
     colorscheme          : dark # "light" (default), "dark"
 search                   : true # true, false (default)
 search_full_content      : true # true, false (default)
-search_provider          : google # lunr (default), algolia, google
+search_provider          : lunr # lunr (default), algolia, google
 lunr:
   search_within_pages    : true # true, false (default)
 
