--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,5 +10,5 @@ main:
     url: /projects/
   # - title: "Courses"
   #   url: /courses/
-  - title: "Random"
-    url: /random/
+  - title: "MISC"
+    url: /misc/
