--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,3 +12,14 @@ main:
   #   url: /courses/
   - title: "MISC"
     url: /misc/
+
+
+docs:
+  - title: Teaching by Department
+    children:
+      - title: "Data Science"
+        url: /teaching/#data-science
+      - title: "Mathematics"
+        url: /teaching/#mathematics
+      - title: "Economics"
+        url: /teaching/#economics
