--- a/_config.yml
+++ b/_config.yml
@@ -116,6 +116,7 @@ author:
   weibo            :
   xing             :
   youtube          :
+  # googlescholar    : "https://scholar.google.com/citations?user=-ZhPymUAAAAJ&hl=en"
 
 footer:
   links:
