--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ author:
   keybase          :
   lastfm           :
   linkedin         : "weiyue-larry-li"
-  instagram        : "larryliweiyue"
+  # instagram        : "larryliweiyue"
   pinterest        :
   soundcloud       :
   stackoverflow    : # "123456/username" (the last part of your profile url, e.g. http://stackoverflow.com/users/123456/username)
